--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer>
   <div class="row">
     <div class="col">social</div>
-    <div class="col">whitespace</div>
+    <div class="col"></div>
     <div class="col">
       <div class="namo">
         <h3>Designed By</h3>
