--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,7 +13,7 @@
   <link href="https://fonts.googleapis.com/css?family=Anton|Roboto:500" rel="stylesheet">
   <!-- Icons -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
+  <link rel="stylesheet" href="{{ site.github.url }}/css/animate.css">
   <link rel="stylesheet" href="{{ site.github.url }}/css/main.css">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
