--- a/css/main.scss
+++ b/css/main.scss
@@ -52,7 +52,7 @@ h1 .title-a,h1 .title-b {
   height: auto;
 }
 .home-jmbo {
-  background-color: rgba(0,0,0,0.1);
+  background-color: rgba(0,0,0,0);
   color: #fff;
   text-align: center;
 }
@@ -60,6 +60,10 @@ h1 .title-a,h1 .title-b {
   background-color: lightgray;
   padding:50px;
   margin-bottom: 50px;
+  text-align: center;
+}
+.nav-item:last-child {
+  margin-left: 15px;
 }
 .card {
   margin-bottom: 10px;
