--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,26 +1,20 @@
-<div class="row">
-  <div class="col-xs-2 col-xs-offset-2 col-lg-2 col-lg-offset-2 text-center">
+<div class="row d-flex justify-content-center">
+  <div class="col-2 col-xs-2">
       <a href="https://twitter.com/{{ site.twitter_username }}">
-          <i class="fa fa-twitter fa-3x" data-wow-delay=".1s"></i>
-          <p>{{ site.twitter_username }}</p>
+          <i class="fa fa-twitter fa-3x animated fadeInUp" data-wow-delay=".1s"></i>
+
       </a>
   </div>
-  <div class="col-xs-2 col-lg-2 text-center">
+  <div class="col-2 col-xs-2 ">
       <a href="/contact/">
-      <i class="fa fa-envelope-o fa-3x" data-wow-delay=".1s"></i>
-          <p>{{ site.email }}</p>
+      <i class="fa fa-envelope-o fa-3x animated fadeInUp" data-wow-delay=".1s"></i>
+
       </a>
   </div>
-  <div class="col-xs-2 col-lg-2 text-center">
+  <div class="col-2 col-xs-2">
       <a href="https://facebook.com/{{ site.github_username }}">
-      <i class="fa fa-facebook fa-3x" data-wow-delay=".1s"></i>
-          <p>{{ site.facebook_username }}</p>
-      </a>
-  </div>
-  <div class="col-xs-2 col-lg-2 text-center">
-      <a href="https://youtube.com/{{ site.github_username }}">
-      <i class="fa fa-youtube fa-3x" data-wow-delay=".1s"></i>
-          <p>{{ site.facebook_username }}</p>
+      <i class="fa fa-facebook fa-3x animated fadeInUp" data-wow-delay=".1s"></i>
+
       </a>
   </div>
 </div>
