--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,7 +1,7 @@
 <div class="row d-flex justify-content-center">
   <div class="col-2 col-xs-2">
-      <a href="https://twitter.com/{{ site.twitter_username }}">
-          <i class="fa fa-twitter fa-3x animated fadeInUp" data-wow-delay=".1s"></i>
+      <a href="tel:07821291783">
+          <i class="fa fa-phone fa-3x animated fadeInUp" data-wow-delay=".1s"></i>
 
       </a>
   </div>
