--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,7 @@
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://bootswatch.com/4-alpha/materia/bootstrap.min.css" type="text/css">
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Anton|Roboto:500" rel="stylesheet">
   <!-- Icons -->
