--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,11 +20,21 @@
         <a class="dropdown-item" href="#">Pass Plus</a>
       </div>
     </li>
+    <li class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" href="Become an Instructor" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Become an Instructor
+      </a>
+      <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+        <a class="dropdown-item" href="#">item1</a>
+        <a class="dropdown-item" href="#">item2</a>
+        <a class="dropdown-item" href="#">item3</a>
+      </div>
+    </li>
     <li class="nav-item">
       <a class="nav-link" href="#">About</a>
     </li>
     <li class="nav-item">
-      <a class="btn btn-primary" href="#">Book</a>
+      <a class="btn btn-primary" href="#">Book Online</a>
     </li>
 
   </ul>
