new home page content

--- a/css/main.scss
+++ b/css/main.scss
@@ -15,6 +15,9 @@
     .nav-item .btn {
         width: 100%;
     }
+    .title-tagline {
+      display: none;
+    }
 }
 
 // Color Variables
@@ -49,6 +52,10 @@ body {
 .navbar-toggler-icon .material-icons {
   font-size: 30px;
 }
+.title-a,.title-b {
+  font-weight: 500;
+    -webkit-text-stroke: 1px #fff;
+}
 .title-a, a .title-a {
   color: $title-a;
 }
@@ -56,8 +63,12 @@ body {
   color: $title-b;
 }
  h2 .title-a, h2 .title-b {
-  -webkit-text-stroke: 1px #fff;
-  font-size: 40px;
+  font-size: 34px;
+  letter-spacing: 2px;
+}
+.title-tagline {
+  font-size: 20px;
+  color: white;
 }
 .navbar-collapse {
   flex-direction: row-reverse;
@@ -91,7 +102,17 @@ body {
   background-color: lightgray;
   padding:50px;
   margin-bottom: 50px;
-  text-align: center;
+  // text-align: center;
+}
+.home-features {
+  list-style:none;
+  font-size: 20px;
+  padding-left: 0;
+}
+ul.home-features li::before {
+  content: "\f00c"; /* FontAwesome Unicode */
+  font-family: FontAwesome;
+  padding-right: 5px;
 }
 .nav-item:last-child {
   margin-left: 15px;
@@ -111,4 +132,8 @@ footer {
 }
 .btn-primary:hover {
   background-color: #388E3C;
+}
+.about-section {
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
