--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
   <span class="navbar-toggler-icon"><i class="material-icons">menu</i></span>
 </button>
-<a class="navbar-brand" href="{{ site.github.url }}"><h2><span class="title-a">check</span><span class="title-b">mirrors</span></h2></a>
+<a class="navbar-brand" href="{{ site.github.url }}"><h2><span class="title-a">check</span><span class="title-b">mirrors</span><span class="title-tagline"> School of Motoring</span></h2></a>
 <div class="collapse navbar-collapse" id="navbarNavDropdown">
   <ul class="navbar-nav justify-content-end">
     <li class="nav-item active">
