--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,7 +3,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-4 col-xs-12">
-      <img src="http://via.placeholder.com/350x350" alt="insert alt">
+      <img src="http://via.placeholder.com/350x350" class="about-image" alt="insert alt">
     </div>
     <div class="col-md-8 col-xs-12">
       <h2>About checkmirrors</h2>
