--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,19 @@
-<footer>
+<footer class="namo">
   <div class="row">
-    <div class="col">social</div>
+    <div class="col">
+      <h3>Around the web</h3>
+      {% include social.html %}</div>
     <div class="col"></div>
     <div class="col">
-      <div class="namo">
+      <div>
         <h3>Designed By</h3>
         <a href="http://www.naamanhudson.com/" target="_blank" class="naaman">Naaman Hudson Web Design</a>
       </div>
+    </div>
+  </div>
+  <div class="footer-bottom">
+    <div class="row">
+      <div class="col-12"><p>Copyright</p></div>
     </div>
   </div>
 </footer>
