--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,9 +15,9 @@
         Learn to Drive
       </a>
       <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-        <a class="dropdown-item" href="#">Practical</a>
-        <a class="dropdown-item" href="#">Theory</a>
-        <a class="dropdown-item" href="#">Pass Plus</a>
+        <a class="dropdown-item" href="{{ site.github.url }}/lessons">Lessons</a>
+        <a class="dropdown-item" href="#">Guide to Learning to Drive</a>
+        <a class="dropdown-item" href="#">Pass Plus Course</a>
       </div>
     </li>
     <li class="nav-item dropdown">
