--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,24 +16,25 @@
       </a>
       <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
         <a class="dropdown-item" href="{{ site.github.url }}/lessons">Lessons</a>
-        <a class="dropdown-item" href="#">Guide to Learning to Drive</a>
-        <a class="dropdown-item" href="#">Pass Plus Course</a>
+        <a class="dropdown-item" href="#">Pass Plus</a>
+        <a class="dropdown-item" href="{{ site.github.url }}/testimonials/">Testimonials</a>
       </div>
     </li>
     <li class="nav-item dropdown">
       <a class="nav-link dropdown-toggle" href="Become an Instructor" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Become an Instructor
+        Instructors
       </a>
       <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-        <a class="dropdown-item" href="#">item1</a>
-        <a class="dropdown-item" href="#">item2</a>
-        <a class="dropdown-item" href="#">item3</a>
+        <a class="dropdown-item" href="#">Our Instructors</a>
+        <a class="dropdown-item" href="#">Our Trainees</a>
+        <a class="dropdown-item" href="#">Become an Instructor</a>
       </div>
     </li>
     <li class="nav-item">
+
     </li>
     <li class="nav-item">
-      <a class="btn btn-primary" href="#">Book Online</a>
+      <a class="btn btn-primary" href="{{ site.github.url }}/contact/">Book Online</a>
     </li>
 
   </ul>
