instructor page commit

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,7 +27,7 @@
       <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
         <a class="dropdown-item" href="#">Our Instructors</a>
         <a class="dropdown-item" href="#">Our Trainees</a>
-        <a class="dropdown-item" href="#">Become an Instructor</a>
+        <a class="dropdown-item" href="{{ site.github.url }}/become-an-instructor/">Become an Instructor</a>
       </div>
     </li>
     <li class="nav-item">
