--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,7 +26,7 @@
       </a>
       <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
         <a class="dropdown-item" href="{{ site.github.url }}/our-instructors/">Our Instructors</a>
-        <a class="dropdown-item" href="#">Our Trainees</a>
+        <a class="dropdown-item" href="{{ site.github.url }}/our-trainees/">Our Trainees</a>
         <a class="dropdown-item" href="{{ site.github.url }}/become-an-instructor/">Become an Instructor</a>
       </div>
     </li>
