--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,19 +1,19 @@
 <div class="row d-flex justify-content-center">
   <div class="col-2 col-xs-2">
       <a href="tel:07821291783">
-          <i class="fa fa-phone fa-3x animated fadeInUp" data-wow-delay=".1s"></i>
+          <i class="fa fa-phone animated fadeInUp" data-wow-delay=".1s"></i>
 
       </a>
   </div>
   <div class="col-2 col-xs-2 ">
       <a href="/contact/">
-      <i class="fa fa-envelope-o fa-3x animated fadeInUp" data-wow-delay=".1s"></i>
+      <i class="fa fa-envelope-o animated fadeInUp" data-wow-delay=".1s"></i>
 
       </a>
   </div>
   <div class="col-2 col-xs-2">
       <a href="https://facebook.com/{{ site.github_username }}">
-      <i class="fa fa-facebook fa-3x animated fadeInUp" data-wow-delay=".1s"></i>
+      <i class="fa fa-facebook animated fadeInUp" data-wow-delay=".1s"></i>
 
       </a>
   </div>
