--- a/css/main.scss
+++ b/css/main.scss
@@ -18,6 +18,12 @@
     .title-tagline {
       display: none;
     }
+    footer a {
+      font-size: 20px;
+    }
+    .footer-cert {
+    display: none;
+    }
 }
 
 // Color Variables
@@ -143,6 +149,11 @@ footer {
   background-color: darkgray;
   padding: 20px;
 }
+.footer-cert {
+  text-align: center;
+  margin-left: 10px;
+  margin-right: 10px;
+}
 .namo {
   text-align: center;
 }
@@ -214,6 +225,18 @@ footer {
 }
 .trainee-img {
   background-image: url({{ site.github.url}}/img/trainee-banner.jpeg);
+  background-position: bottom;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-bottom: 40px;
+  margin-right: 0px;
+  margin-left: 0px;
+  width: 100%;
+  height: auto;
+  padding: 90px;
+}
+.testimonal-img {
+  background-image: url(http://via.placeholder.com/1263x365);
   background-position: bottom;
   background-repeat: no-repeat;
   background-size: cover;
