New contact form

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -34,7 +34,7 @@
 
     </li>
     <li class="nav-item">
-      <a class="btn btn-primary" href="{{ site.github.url }}/contact/">Book Online</a>
+      <a class="btn btn-primary typeform-share button" href="https://naaman10.typeform.com/to/gek77r" data-mode="drawer_right" target="_blank">Book Now </a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
     </li>
 
   </ul>
