Lessons update and new content on other pages too

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
       </a>
       <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
         <a class="dropdown-item" href="{{ site.github.url }}/lessons">Lessons</a>
-        <a class="dropdown-item" href="#">Pass Plus</a>
+        <a class="dropdown-item" href="{{ site.github.url }}/passplus">Pass Plus</a>
         <a class="dropdown-item" href="{{ site.github.url }}/testimonials/">Testimonials</a>
       </div>
     </li>
