--- a/css/main.scss
+++ b/css/main.scss
@@ -253,6 +253,12 @@ footer {
 .lessons-lessons {
   margin-bottom: 40px;
 }
+.lessons-title {
+  margin-bottom: 20px;
+}
+.lessons-2 h4 {
+  color: white;
+}
 .inst-image {
   margin-top: 20px;
 }
