--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,15 +1,17 @@
 <!-- About section -->
 <section class="about-section">
-<div class="container">
-  <div class="row">
-    <div class="col-md-4 col-xs-12">
-      <img src="http://via.placeholder.com/350x350" class="about-image" alt="insert alt">
-    </div>
-    <div class="col-md-8 col-xs-12">
-      <h2>About checkmirrors</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4 col-xs-12">
+        <img src="{{ site.github.url }}/img/about.jpg" class="about-image" alt="checkmirrors cars">
+      </div>
+      <div class="col-md-8 col-xs-12">
+        <h2>About checkmirrors</h2>
+        <p>Checkmirrors was established in 2014. The company director is Sarah Hellowell who has over 14 years experience instructing.</p>
+        <p>We are a small company with experienced driving instructors who give total quality tuition assuring complete safety for each pupil.</p>
+        <p>Our aim is not just to teach people to pass a driving test but to teach a skill for life so when they leave us they are a safe and competent driver.</p>
+      </div>
 
+    </div>
   </div>
-</div>
 </section>
