--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,7 +17,7 @@
   </div>
   <div class="footer-bottom">
     <div class="row">
-      <div class="col-12"><p>Copyright</p></div>
+      <div class="col-12"><p>Copyright &copy; {{ site.title }} {{ site.time | date: "%Y"  }}</p></div>
     </div>
   </div>
 </footer>
