--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,7 +19,7 @@
     {% else %}
     <meta property="og:url"           content="{{ site.github.url }}" />
     <meta property="og:type"          content="website" />
-    <meta property="og:title"         content="I passed with Check Mirrors" />
+    <meta property="og:title"         content="checkmirrors School of Motoring" />
     <meta property="og:description"   content="{{ page.title }}" />
     <meta property="og:image"         content="{{ site.github.url }}/img/share-image.jpg" />
   {% endif %}
