fb & color changes

--- a/_includes/fb-share.html
+++ b/_includes/fb-share.html
@@ -3,8 +3,8 @@
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) return;
   js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.10";
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.10";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 
-<div class="fb-like" data-href="https://www.facebook.com/people/Checkmirrors-SchoolofMotoring" data-layout="button" data-action="like" data-size="large" data-show-faces="false" data-share="true"></div>
+<div class="fb-like" data-href="https://www.facebook.com/pg/checkmirrors" data-layout="button_count" data-action="like" data-size="large" data-show-faces="true" data-share="true"></div>
