--- a/css/main.scss
+++ b/css/main.scss
@@ -50,7 +50,7 @@ body {
   counter-reset: item;
   font-family: 'Roboto', sans-serif;
   // font-weight: 300;
-  background-color: #eee;
+  background-color: #e2e2e2;
   color: $primary-text-color
 }
 .navbar-toggler-icon {
@@ -158,10 +158,10 @@ footer {
   text-align: center;
 }
 .btn-primary {
-  background-color: $accent-color;
+  background-color: #388E3C;
 }
 .btn-primary:hover {
-  background-color: #388E3C;
+  background-color: $accent-color;
 }
 .about-section {
   margin-top: 30px;
@@ -200,7 +200,7 @@ footer {
   padding: 90px;
 }
 .instructor-img {
-  background-image: url({{ site.github.url}}/img/york-map.png);
+  background-image: url({{ site.github.url}}/img/leeds-map.png);
   background-position: bottom;
   background-repeat: no-repeat;
   background-size: cover;
