--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,11 @@
         Learn to Drive
       </a>
       <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-        <a class="dropdown-item" href="{{ site.github.url }}/lessons">Lessons</a>
+        <h6 class="dropdown-header">Driving Lessons</h6>
+        <a class="dropdown-item" href="{{ site.github.url }}/driving-lessons-york">York</a>
+        <a class="dropdown-item" href="{{ site.github.url }}/driving-lessons-leeds">Leeds</a>
+        <a class="dropdown-item" href="{{ site.github.url }}/driving-lessons-wakefield">Wakefield</a>
+        <div class="dropdown-divider"></div>
         <a class="dropdown-item" href="{{ site.github.url }}/passplus">Pass Plus</a>
         <a class="dropdown-item" href="{{ site.github.url }}/testimonials/">Testimonials</a>
       </div>
