--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,7 +8,7 @@
       <div class="col-md-8 col-xs-12">
         <h2>About checkmirrors</h2>
         <p>Checkmirrors was established in 2014. The company director is Sarah Hellowell who has over 14 years experience instructing.</p>
-        <p>We are a small company with experienced driving instructors who give total quality tuition assuring complete safety for each pupil.</p>
+        <p>We are a small company with experienced driving instructors in York who give total quality tuition assuring complete safety for each pupil.</p>
         <p>Our aim is not just to teach people to pass a driving test but to teach a skill for life so when they leave us they are a safe and competent driver.</p>
       </div>
 
