--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,11 +15,7 @@
         Learn to Drive
       </a>
       <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-        <h6 class="dropdown-header">Driving Lessons</h6>
-        <a class="dropdown-item" href="{{ site.github.url }}/driving-lessons-york">York</a>
-        <a class="dropdown-item" href="{{ site.github.url }}/driving-lessons-leeds">Leeds</a>
-        <a class="dropdown-item" href="{{ site.github.url }}/driving-lessons-wakefield">Wakefield</a>
-        <div class="dropdown-divider"></div>
+        <a class="dropdown-item" href="{{ site.github.url }}/driving-lessons-york">Lessons in York</a>
         <a class="dropdown-item" href="{{ site.github.url }}/passplus">Pass Plus</a>
         <a class="dropdown-item" href="{{ site.github.url }}/testimonials/">Testimonials</a>
       </div>
@@ -30,7 +26,7 @@
       </a>
       <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
         <a class="dropdown-item" href="{{ site.github.url }}/our-instructors/">Our Instructors</a>
-        <a class="dropdown-item" href="{{ site.github.url }}/our-trainees/">Our Trainees</a>
+        <!-- <a class="dropdown-item" href="{{ site.github.url }}/our-trainees/">Our Trainees</a> -->
         <a class="dropdown-item" href="{{ site.github.url }}/become-an-instructor/">Become an Instructor</a>
       </div>
     </li>
