--- a/css/main.scss
+++ b/css/main.scss
@@ -148,7 +148,6 @@ ul.home-features li::before {
   margin-bottom: 10px;
 }
 footer {
-  margin-top: 40px;
   background-color: darkgray;
   padding: 20px;
 }
@@ -170,7 +169,9 @@ footer {
 }
 .about-section {
   margin-top: 30px;
-  margin-bottom: 30px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
 }
 .about-image {
   width: 100%;
@@ -341,4 +342,8 @@ footer a .fa {
   margin-right: auto;
   margin-top: 50px;
   margin-bottom: 20px;
+}
+.nav-item:hover {
+  background-color: rgba(0,0,0,0.1);
+  border-radius: .3rem;
 }
