--- a/css/main.scss
+++ b/css/main.scss
@@ -15,6 +15,9 @@
     .nav-item .btn {
         width: 100%;
     }
+    .button {
+      text-align: center;
+    }
     .title-tagline {
       display: none;
     }
@@ -59,6 +62,87 @@ body {
 .navbar-toggler-icon .material-icons {
   font-size: 30px;
 }
+.navbar-toggler {
+  padding: 0;
+}
+.navbar-toggler-right {
+  top: 1rem;
+  width: 30px;
+  height: 30px;
+}
+#nav-icon3 {
+  width: 30px;
+  height: 30px;
+  position: relative;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .5s ease-in-out;
+  -moz-transition: .5s ease-in-out;
+  -o-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  cursor: pointer;
+}
+
+#nav-icon3 span {
+  display: block;
+  position: absolute;
+  height: 3px;
+  width: 100%;
+  background: white;
+  opacity: 1;
+  left: 0;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .25s ease-in-out;
+  -moz-transition: .25s ease-in-out;
+  -o-transition: .25s ease-in-out;
+  transition: .25s ease-in-out;
+}
+
+/* Icon 3 */
+
+#nav-icon3 span:nth-child(1) {
+  top: 0px;
+}
+
+#nav-icon3 span:nth-child(2),#nav-icon3 span:nth-child(3) {
+  top: 10px;
+}
+
+#nav-icon3 span:nth-child(4) {
+  top: 20px;
+}
+
+#nav-icon3.open span:nth-child(1) {
+  top: 18px;
+  width: 0%;
+  left: 50%;
+}
+
+#nav-icon3.open span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+#nav-icon3.open span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+
+#nav-icon3.open span:nth-child(4) {
+  top: 18px;
+  width: 0%;
+  left: 50%;
+}
+
 .title-a,.title-b {
   font-weight: 500;
     -webkit-text-stroke: 1px #fff;
@@ -116,6 +200,8 @@ p.lead>span.title-a, p.lead>span.title-b {
   background-position: center;
   width: 100%;
   height: auto;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 .home-jmbo {
   background-color: rgba(0,0,0,0);
@@ -136,20 +222,14 @@ p.lead>span.title-a, p.lead>span.title-b {
   font-size: 20px;
   padding-left: 0;
 }
-ul.home-features li::before {
-  content: "\f00c"; /* FontAwesome Unicode */
-  font-family: FontAwesome;
-  padding-right: 5px;
-}
-.nav-item:last-child {
-  margin-left: 15px;
-}
+
 .card {
   margin-bottom: 10px;
 }
 footer {
   background-color: darkgray;
   padding: 20px;
+  margin-top: 30px;
 }
 .footer-cert {
   text-align: center;
@@ -160,12 +240,12 @@ footer {
   text-align: center;
 }
 .btn-primary {
-  background-color: #388E3C;
-  border-color: #388E3C;
+  background-color: #388E3C!important;
+  border-color: #388E3C!important;
 }
 .btn-primary:hover {
-  background-color: $accent-color;
-  border-color: $accent-color;
+  background-color: $accent-color!important;
+  border-color: $accent-color!important;
 }
 .about-section {
   margin-top: 30px;
@@ -243,10 +323,9 @@ footer {
 }
 .testimonal-img {
   background-image: url('{{ site.github.url }}/img/testimonials-header.jpg');
-  background-position: bottom;
+  background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  margin-bottom: 40px;
   margin-right: 0px;
   margin-left: 0px;
   width: 100%;
@@ -258,7 +337,6 @@ footer {
   background-position: bottom;
   background-repeat: no-repeat;
   background-size: cover;
-  margin-bottom: 40px;
   margin-right: 0px;
   margin-left: 0px;
   width: 100%;
@@ -277,7 +355,12 @@ footer {
   margin-bottom: 40px;
 }
 .lessons-title {
+  padding-top: 40px;
+  background-color: #e2e2e2;
   margin-bottom: 20px;
+}
+.lessons-title .title-a,.lessons-title .title-b, #pp-testimonial .title-a, #pp-testimonial .title-b {
+      -webkit-text-stroke: 0;
 }
 .lessons-2 h4 {
   color: white;
@@ -292,6 +375,10 @@ footer {
 .inst-image img {
   width: 100%;
 }
+.testimonial-card .card-block{
+  min-height: 224px;
+  padding: 20px;
+}
 form {
   background-color: white;
   padding: 40px;
@@ -303,6 +390,13 @@ form {
   padding: 40px;
   margin-top: 40px;
   margin-bottom: -40px;
+}
+.test-promo {
+  text-align: center;
+  margin-bottom: 40px;
+  background-color: white;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 ol.list {
   list-style: none;
@@ -343,7 +437,39 @@ footer a .fa {
   margin-top: 50px;
   margin-bottom: 20px;
 }
-.nav-item:hover {
-  background-color: rgba(0,0,0,0.1);
-  border-radius: .3rem;
+// .nav-item:hover {
+//   background-color: rgba(0,0,0,0.1);
+//   border-radius: .3rem;
+// }
+.news-section {
+  color: black;
+  text-align: left;
+}
+.news-section .card {
+  padding: 15px;
+}
+#motorway-section {
+  background-color: white;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  margin-bottom: 20px;
+}
+#motorway-section .title-a,#motorway-section .title-b {
+      -webkit-text-stroke: 0;
+}
+.img-respon {
+  width: 100%;
+  height: auto;
+}
+#pp-testimonial .card-body {
+  padding: 15px;
+}
+.test-year, .test-year p.lead {
+  text-align: center;
+}
+footer #social i {
+  font-size: 30px;
+}
+.nav-link.typeform-share.button {
+  background-color: #388E3C;
 }
