--- a/_includes/share-meta.html
+++ b/_includes/share-meta.html
@@ -2,4 +2,4 @@
 <meta property="og:type"          content="website" />
 <meta property="og:title"         content="I passed with Check Mirrors" />
 <meta property="og:description"   content="{{ page.title }}" />
-<meta property="og:image"         content="{{ page.img-url }}" />
+<meta property="og:image"         content="{{ page.image }}" />
