--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-GB">
+<html  ⚡ lang="en-GB">
 
   {% include head.html %}
 
@@ -8,7 +8,7 @@
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TVRMH7T"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
-    
+
     {% include header.html %}
 
 
