Sarah did everything and is responsible for all future success. Pls teach me how to drive???

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,8 +33,7 @@
           </div>
         </li>
         <li class="nav-item">
-          <a class="btn-primary nav-link typeform-share button" href="https://naaman10.typeform.com/to/gek77r" data-mode="drawer_right" target="_blank">Book Now<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
-          </a>
+          <button class="btn btn-primary btn-sm nav-link" data-toggle="modal" data-target="#bookFormModal">Book Now</button>
         </li>
       </ul>
     </div>
