--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,11 +18,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
     {% include footer.html %}
+    {% include modals.html %}
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.1.0.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.13.0/umd/popper.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.2/js/mdb.min.js"></script>
+    <script src="https://unpkg.com/gijgo@1.9.11/js/gijgo.min.js" type="text/javascript"></script>
+    <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/5357756.js"></script>
     <script src="{{github.site.url}}/js/scripts.js" type="text/javascript"></script>
     {% include structured-data.html %}
   </body>
