--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
         </div>
     </button>
       <div class="collapse navbar-collapse" id="basicExampleNav">
-      <ul class="navbar-nav justify-content-end">
+      <ul class="navbar-nav justify-content-end align-items-center">
         <li class="nav-item">
           <a class="nav-link" href="{{ site.github.url }}">Home</a>
         </li>
