--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,7 +33,7 @@
           </div>
         </li>
         <li class="nav-item">
-          <button class="btn btn-primary btn-sm nav-link" data-toggle="modal" data-target="#bookFormModal">Book Now</button>
+          <button class="btn btn-primary btn-sm nav-link btn-responsive" data-toggle="modal" data-target="#bookFormModal">Book Now</button>
         </li>
       </ul>
     </div>
