--- a/css/main.scss
+++ b/css/main.scss
@@ -12,31 +12,32 @@
 }
 
 @media screen and (max-width: 480px) {
-    .nav-item .btn {
-        width: 100%;
-    }
-    .button {
-      text-align: center;
-    }
-    .title-tagline {
-      display: none;
-    }
-    footer a .fa, footer a i.far, footer a i.fab {
-      font-size: 20px;
-    }
-    .footer-cert {
+  .nav-item .btn {
+    width: 100%;
+  }
+  .button {
+    text-align: center;
+  }
+  .title-tagline {
     display: none;
-    }
-    .btn-responsive {
-      margin: inherit;
-      width: 100%;
-    }
-    .modal.show .modal-dialog {
-      width: 100%;
-margin: 0;
-height: 100%;
-
-    }
+  }
+  footer a .fa,
+  footer a i.fab,
+  footer a i.far {
+    font-size: 20px;
+  }
+  .footer-cert {
+    display: none;
+  }
+  .btn-responsive {
+    margin: inherit;
+    width: 100%;
+  }
+  .modal.show .modal-dialog {
+    width: 100%;
+    margin: 0;
+    height: 100%;
+  }
 }
 
 // Color Variables
@@ -223,7 +224,8 @@ p.lead>span.title-a, p.lead>span.title-b {
 }
 .home-details {
   background-color: white;
-  padding:50px;
+  padding-top:50px;
+  padding-bottom:50px;
   margin-bottom: 50px;
   text-align: center;
 }
@@ -253,6 +255,10 @@ footer {
   border-color: #388E3C!important;
 }
 .btn-primary:hover {
+  background-color: $accent-color!important;
+  border-color: $accent-color!important;
+}
+.btn-secondary {
   background-color: $accent-color!important;
   border-color: $accent-color!important;
 }
@@ -516,3 +522,25 @@ div#busy {
     -webkit-animation: spinner-border .75s linear infinite;
     animation: spinner-border .75s linear infinite;
   }
+.plain-intro {
+  min-height: 300px;
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 20%, 0 100%);
+  clip-path: polygon(0 0, 100% 0, 100% 20%, 0 100%);
+  color: #ffffff;
+  padding-top: 30px;
+}
+.home-features li {
+  margin: 10px;
+}
+.card.text-white .card-text {
+  color: white;
+  text-align: center;
+  font-size: 26px;
+}
+.card.text-white .card-text a {
+  color: $title-a;
+  font-weight: bold;
+}
+#ppTestimonial {
+  background-color: white!important;
+}
