--- a/_includes/book-promo.html
+++ b/_includes/book-promo.html
@@ -5,7 +5,7 @@
       <div class="col"></div>
       <div class="col-6">
         <h3>Book from only {{site.pricePerLesson}} per hour or 10 lessons for {{site.priceForTen}}</h3>
-        <a class="btn btn-primary btn-lg typeform-share button" href="https://naaman10.typeform.com/to/y2l4S0" data-mode="drawer_right" target="_blank">Book Now</a>
+        <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#bookFormModal">Book Now</button>
       </div>
       <div class="col"></div>
     </div>
