--- a/_includes/head.html
+++ b/_includes/head.html
@@ -31,7 +31,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
   <link rel="stylesheet" href="{{site.github.url }}/css/flaticon.css" />
   <link rel="stylesheet" href="{{site.github.url }}/css/themify-icons.css" />
-  <link rel="stylesheet" href="{{ site.github.url }}/css/owl.carousel.min.css" />
+  <link rel="stylesheet" href="{{ site.github.url }}/css/owl-carousel/owl.carousel.min.css" />
   <link rel="stylesheet" href="{{ site.github.url }}/css/nice-select/css/nice-select.css" />
   <link rel="stylesheet" href="{{ site.github.url }}/css/main.css" type="text/css">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
