--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -4,7 +4,7 @@
 /* =================================== */
 
 .footer-area {
-  background: $title-color;
+  background: #A9A9A9;
   .single-footer-widget {
     @media (max-width: 991px) {
       margin-bottom: 30px;
