--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,6 +1,6 @@
 /*font Variables*/
 $primary-font: "Roboto", sans-serif;
-$title-font: "Rubik", sans-serif;
+$title-font: "Roboto", sans-serif;
 
 /*Color Variables*/
 $primary-color: #fdc632;
