--- a/_includes/book-promo.html
+++ b/_includes/book-promo.html
@@ -1,12 +1,11 @@
 <!-- Become an Instructor Promo -->
-
-  <div class="container-fluid">
-    <div class="row test-promo">
-      <div class="col"></div>
-      <div class="col-6">
-        <h3>Book from only {{site.pricePerLesson}} per hour or 10 lessons for {{site.priceForTen}}</h3>
+<div class="container-fluid">
+  <div class="row justify-content-center mt-3">
+    <div class="col-lg-8">
+      <div class="main_title">
+        <h2 class="mb-3">Book from only {{site.pricePerLesson}} per hour or 10 lessons for {{site.priceForTen}}</h2>
         <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#bookFormModal">Book Now</button>
       </div>
-      <div class="col"></div>
     </div>
   </div>
+</div>
