--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,23 +1,29 @@
-<footer class="namo">
-  <div class="row">
-    <div class="col-md-4 col-xs-12">
-      <h3>Around the web</h3>
-      {% include social.html %}</div>
-    <div class="col-md-4 col-xs-12">
-      <img class="footer-cert" src="{{ site.github.url }}/img/dvsa.png" src="DVSA ADI" width="25%" >
-      <img class="footer-cert" src="{{ site.github.url }}/img/pass-plus.png" alt="Pass Pluss Certified" width="25%">
-      <img class="footer-cert" src="{{ site.github.url }}/img/diamond.png" alt="DIAmond Advanced Motorists" width="25%">
-    </div>
-    <div class="col-md-4 col-xs-12">
-      <div>
-        <h3>Designed By</h3>
-        <a href="http://www.naamanhudson.com/" target="_blank" class="naaman">Naaman Hudson Web Design</a>
+<footer class="footer-area section_gap">
+  <div class="container">
+    <div class="row footer-bottom d-flex justify-content-between">
+        <div class="col-lg-4 col-sm-12 footer-social justify-content-left">
+          <h3>Get in touch</h3>
+          <a href="https://www.facebook.com/pg/checkmirrors" target="_blank"><i class="ti-facebook"></i></a>
+          <a href="#"><i class="ti-email"></i></a>
+          <a href="tel:07821291783"><i class="fa fa-phone animated fadeInUp" data-wow-delay=".1s"></i></a>
+        </div>
+      <div class="col-md-4 col-xs-12">
+
+      </div>
+      <div class="col-md-4 col-xs-12">
+        <div class="footer-right">
+          <img class="footer-cert" src="{{ site.github.url }}/img/dvsa.png" src="DVSA ADI" width="25%">
+          <img class="footer-cert" src="{{ site.github.url }}/img/pass-plus.png" alt="Pass Pluss Certified" width="25%">
+          <img class="footer-cert" src="{{ site.github.url }}/img/diamond.png" alt="DIAmond Advanced Motorists" width="25%">
+        </div>
       </div>
     </div>
-  </div>
-  <div class="footer-bottom">
-    <div class="row">
-      <div class="col-12"><p>Copyright &copy; {{ site.title }} {{ site.time | date: "%Y"  }}</p></div>
+    <div class="footer-bottom">
+      <div class="row">
+        <div class="col-12">
+          <p>Copyright &copy; {{ site.title }} {{ site.time | date: "%Y"  }}</p>
+        </div>
+      </div>
     </div>
   </div>
 </footer>
