--- a/_includes/form.html
+++ b/_includes/form.html
@@ -1,15 +1,19 @@
 
-<form id="bookForm">
+<form class="contact_form" id="bookForm">
   <div class="row">
     <div class="col-12 col-sm-6">
+      <div class="form-group">
       <label for="firstName">First name<span class="required">*</span></label>
       <input type="text" name="firstname" class="form-control mb-3" id="firstName" placeholder="First name" required>
       <div class="invalid-feedback">Please enter your first name.</div>
+      </div>
     </div>
     <div class="col-12 col-sm-6">
+      <div class="form-group">
       <label for="lastName">Last name<span class="required">*</span></label>
       <input type="text" name="lastname" class="form-control mb-3" id="lastName" placeholder="Last name" required>
       <div class="invalid-feedback">Please enter your last name.</div>
+      </div>
     </div>
   </div>
   <div class="form-group">
@@ -19,14 +23,14 @@
   </div>
   <div class="form-group">
     <label for="contactNumber">Contact number<span class="required">*</span></label>
-    <input type="number" name="phone" class="form-control" id="contactNumber" placeholder="mobile or landline" required>
+    <input type="tel" name="phone" class="form-control" id="contactNumber" placeholder="mobile or landline" required>
   </div>
   <label for="startDate">Preferred start date</label>
-  <div class="input-group mb-3" id="startDateGroup">
+  <div class="form-group input-group mb-3" id="startDateGroup">
     <input autocomplete="off" name="start_date" class="form-control" id="startDate"/>
-    <div class="input-group-append">
+    <div class="input-group-append" id="datePickerIcon">
          <div class="input-group-text"><i class="far fa-calendar-alt"></i></div>
-       </div>
+    </div>
   </div>
   <div class="form-group">
     <label for="comments">Any comments</label>
