--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html>
 <html  ⚡ lang="en-GB">
 
   {% include head.html %}
@@ -24,16 +24,18 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <script src="{{ site.github.url }}/js/popper.js"></script>
     <script src="{{ site.github.url }}/js/bootstrap.min.js"></script>
     <script src="{{ site.github.url }}/js/jquery.nice-select.min.js"></script>
+    <script src="{{ site.github.url }}/js/jquery.background-video.js"></script>
     <script src="{{ site.github.url }}/js/owl.carousel.min.js"></script>
     <script src="{{ site.github.url }}/js/owl-carousel-thumb.min.js"></script>
     <script src="{{ site.github.url }}/js/jquery.ajaxchimp.min.js"></script>
     <script src="{{ site.github.url }}/js/mail-script.js"></script>
+    <script src="{{ site.github.url }}/js/jquery.validate.min.js"></script>
     <!--gmaps Js-->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjCGmQ0Uq4exrzdcL6rvxywDDOvfAu6eE"></script>
     <script src="{{ site.github.url }}/js/gmaps.min.js"></script>
     <script src="{{ site.github.url }}/js/theme.js"></script>
     <script src="https://unpkg.com/gijgo@1.9.11/js/gijgo.min.js" type="text/javascript"></script>
-    <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/5357756.js"></script>
+    <!-- <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/5357756.js"></script> -->
     <!-- Hotjar Tracking Code for https://www.checkmirrors.co.uk -->
     <script>
         (function(h,o,t,j,a,r){
