--- a/_includes/structured-data.html
+++ b/_includes/structured-data.html
@@ -7,7 +7,7 @@
   "image" : "http://www.checkmirrors.co.uk/img/card-1.jpg",
   "address" : {
     "@type" : "PostalAddress",
-    "addressLocality" : "York, Leeds & Wakefield"
+    "addressLocality" : "York"
   }
 }
 </script>
