--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
         <div class="col-lg-4 col-sm-12 footer-social justify-content-left">
           <h3>Get in touch</h3>
           <a href="https://www.facebook.com/pg/checkmirrors" target="_blank"><i class="ti-facebook"></i></a>
-          <a href="#"><i class="ti-email"></i></a>
+          <a  id="footModal"><i class="ti-email"></i></a>
           <a href="tel:07821291783"><i class="fa fa-phone animated fadeInUp" data-wow-delay=".1s"></i></a>
         </div>
       <div class="col-md-4 col-xs-12">
