pass pluss price

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,7 +26,7 @@
             <a class="nav-link" href="{{ site.github.url }}">Home</a>
           </li>
           <li class="nav-item submenu dropdown">
-            <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Learn to Drive</a>
+            <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Learn to Drive <i class="fas fa-caret-down"></i></a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <a class="dropdown-item" href="{{ site.github.url }}/driving-lessons-york">Lessons in York</a>
               <a class="dropdown-item" href="{{ site.github.url }}/passplus">Pass Plus</a>
@@ -35,8 +35,8 @@
           </li>
           <li class="nav-item submenu dropdown">
             <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Instructors
-            </a>
+              Instructors 
+            <i class="fas fa-caret-down"></i></a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <a class="dropdown-item" href="{{ site.github.url }}/our-instructors/">Our Instructors</a>
               <!-- <a class="dropdown-item" href="{{ site.github.url }}/our-trainees/">Our Trainees</a> -->
