--- a/_includes/normal-meta.html
+++ b/_includes/normal-meta.html
@@ -2,4 +2,4 @@
 <meta property="og:type"          content="website" />
 <meta property="og:title"         content="checkmirrors School of Motoring" />
 <meta property="og:description"   content="{{ page.title }}" />
-<meta property="og:image"         content="{{ site.github.url }}/img/share-image.jpg" />
+<meta property="og:image"         content="{{ site.github.url }}{{ site.shareImage }}" />
