--- a/_includes/book-promo.html
+++ b/_includes/book-promo.html
@@ -1,8 +1,8 @@
 <!-- Become an Instructor Promo -->
-<div class="container-fluid">
+<div class="container-fluid py-5">
   <div class="row justify-content-center mt-3">
     <div class="col-lg-8">
-      <div class="main_title">
+      <div class="text-center mb-3">
         <h2 class="mb-3">Book from only {{site.pricePerLesson}} per hour or 10 lessons for {{site.priceForTen}}</h2>
         <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#bookFormModal">Book Now</button>
       </div>
